# Aegis

./: Cargo.toml  README.md
docs/: package-lock.json  package.json  risk-oracle-layer.md  tailwind.config.ts
docs/app/: layout.tsx
docs/app/docs/: layout.tsx  page.tsx
docs/app/docs/integrations/: page.tsx
docs/app/docs/protocol-overview/: page.tsx
docs/app/docs/risk-oracle-layer/: page.tsx
docs/architecture/: protocol-overview.md
docs/components/: docs-sidebar.tsx  footer.tsx  hero.tsx  navbar.tsx  problem.tsx
docs/components/ScrollSequence/: canvasUtils.ts  preloadImages.ts
layers/circuit-breaker/: README.md
layers/circuit-breaker/apps/keeper/: Cargo.toml  README.md
layers/circuit-breaker/apps/keeper/src/: cb_account.rs  config.rs  error.rs  ix.rs  keeper.rs  lib.rs  main.rs  pipeline.rs  plan.rs  rpc.rs
layers/circuit-breaker/apps/keeper/tests/: e2e_wiring.rs
layers/circuit-breaker/crates/core/: Cargo.toml  README.md
layers/circuit-breaker/crates/core/src/: lib.rs  risk_oracle_feed.rs  types.rs
layers/circuit-breaker/crates/core/src/adaptive_fees/: mod.rs
layers/circuit-breaker/crates/core/src/coordination/: mod.rs
layers/circuit-breaker/crates/core/src/liquidity_routing/: mod.rs
layers/circuit-breaker/crates/core/src/policy/: mod.rs
layers/circuit-breaker/crates/core/src/recovery/: mod.rs
layers/circuit-breaker/crates/core/src/throttling/: mod.rs
layers/circuit-breaker/crates/core/src/toxic_arbitrage/: mod.rs
layers/circuit-breaker/programs/circuit-breaker/: Cargo.toml  README.md
layers/circuit-breaker/programs/circuit-breaker/src/: error.rs  instruction.rs  lib.rs  state.rs
layers/risk-oracle/: README.md
layers/risk-oracle/apps/api/: .env.example  Cargo.toml  README.md
layers/risk-oracle/apps/api/src/: chain_monitor.rs  config.rs  error.rs  main.rs  monitor_resolve.rs  policy_wire.rs  state.rs
layers/risk-oracle/apps/api/src/http/: mod.rs  monitor.rs  routes.rs
layers/risk-oracle/apps/frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
layers/risk-oracle/apps/frontend/app/: globals.css  layout.tsx  page.tsx
layers/risk-oracle/apps/frontend/app/docs/: layout.tsx  page.tsx
layers/risk-oracle/apps/frontend/app/docs/integrations/: page.tsx
layers/risk-oracle/apps/frontend/app/docs/protocol-overview/: page.tsx
layers/risk-oracle/apps/frontend/app/docs/risk-oracle-layer/: page.tsx
layers/risk-oracle/apps/frontend/app/monitor/: layout.tsx  page.tsx
layers/risk-oracle/apps/frontend/app/risk-oracle-api/[[...path]]/: route.ts
layers/risk-oracle/apps/frontend/components/: architecture.tsx  benefits.tsx  cta.tsx  docs-sidebar.tsx  flow.tsx  footer.tsx  github-icon.tsx  hero.tsx  integrations.tsx  logo.tsx  monitor-dashboard.tsx  navbar.tsx
layers/risk-oracle/apps/frontend/components/ScrollSequence/: ScrollSequence.tsx  useScrollSequence.ts
layers/risk-oracle/apps/frontend/hooks/: use-monitor.ts
layers/risk-oracle/apps/frontend/lib/: risk-oracle.ts
layers/risk-oracle/apps/oracle-publisher/: Cargo.toml  README.md
layers/risk-oracle/apps/oracle-publisher/src/: config.rs  error.rs  main.rs  publisher.rs
layers/risk-oracle/crates/core/: Cargo.toml  README.md
layers/risk-oracle/crates/core/src/: lib.rs  types.rs
layers/risk-oracle/crates/core/src/alerts/: mod.rs
layers/risk-oracle/crates/core/src/depeg/: mod.rs
layers/risk-oracle/crates/core/src/explainability/: mod.rs
layers/risk-oracle/crates/core/src/liquidity/: mod.rs
layers/risk-oracle/crates/core/src/market_state/: mod.rs
layers/risk-oracle/crates/core/src/panic/: mod.rs
layers/risk-oracle/crates/core/src/scoring/: mod.rs
layers/risk-oracle/crates/core/src/signals/: mod.rs
layers/risk-oracle/crates/ingestion/: Cargo.toml
layers/risk-oracle/crates/ingestion/src/: config.rs  error.rs  lib.rs  main.rs  models.rs  pipeline.rs  sink.rs
layers/risk-oracle/crates/ingestion/src/sources/: dex_pools.rs  mod.rs  pyth.rs  solana_rpc.rs  whale_tracker.rs
layers/risk-oracle/programs/risk-oracle/: Cargo.toml  README.md  test.rs
layers/risk-oracle/programs/risk-oracle/src/: instruction.rs  lib.rs  state.rs
