[package]
name = "circuit-breaker-keeper"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "circuit_breaker_keeper"
path = "src/lib.rs"

[[bin]]
name = "circuit-breaker-keeper"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
bs58 = "0.5"
serde_json = "1.0"
shock-absorber-circuit-breaker = { path = "../../crates/core" }
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json"] }
ureq = { version = "2.12.1", features = ["json"] }

[lints]
workspace = true

