[package]
name = "shock-absorber-circuit-breaker"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "shock_absorber_circuit_breaker"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }

[lints]
workspace = true

