[package]
name = "risk-oracle-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "risk-oracle-api"
path = "src/main.rs"

[dependencies]
axum = "0.8.7"
base64 = "0.22.1"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
shock-absorber-circuit-breaker = { path = "../../../circuit-breaker/crates/core" }
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json"] }

[lints]
workspace = true

