[package]
name = "shock-absorber-risk-oracle"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "shock_absorber_risk_oracle"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }

[lints]
workspace = true

